# sc3ktape

./: CMakeLists.txt  README.md  SC3KBasic.cpp  SC3KBasic.h  SoundReader.cpp  SoundReader.h  log.cpp  log.h  main.cpp  makefile
asmtest/: Makefile  PSGLib_blv3.asm  PSGLib_blv3.i  PSGLib_blv3_ramvars.i  SpaceHarrier09Syura.vgm  basicinit.sc.bas  bitmap.asm  decomp.asm  demo.asm  krb_cyberskull.sc2.asm  krb_mkd5.sc2.asm  linescroll.asm  mire.sc2.asm  origstate.S00  origstateLINUX.S00  sc3k.asm  sc3k.i  shrinkler_orig.asm  shrinkler_vdp.asm  starfield3d.asm
asmtest/charsets/: aeg_collection_11.64c
asmtest/res/: projection128.cbin
pixer/: CMakeLists.txt  main.cpp  test.sc2
pixer/cruncher/: DataFile.h  DataShrinkler.cpp  HunkFile.h  LZEncoder.h  RangeDecoder.h  SuffixArray.h  Verifier.h  assert.h  doshunks.h
pixer/validation/: krb_cyberskull.sc2  krb_mkd5.sc2
sc3kpetscii/: CMakeLists.txt  main.cpp  test.json
sc3ktape/: CMakeLists.txt  SC3KBasic.cpp  SC3KBasic.h  SC3KSoundAndBytes.cpp  SC3KSoundAndBytes.h  SoundReader.cpp  SoundReader.h  c64charsetToAscii64.cpp  checksc3krom.cpp  main.cpp  mathtables.cpp  mekastateloader.cpp
sc3ktape/validation/: FileSystem.sc.bas  Geranium.wave.sc.bas  Prog_BasicWithAsm.sc.bas  Prog_ChangeColorWithVDPDirect.sc.bas  Prog_MusicAndSoundEditor.sc.bas  Prog_PatternMaker.sc.bas  Prog_ShowColors.sc.bas  Prog_SiliciumPrintDemo.sc.bas  Prog_SiliciumPrintDemo.sc.bas.wave.sc.bas  savedByOldSc3k.wav.sc.bas
sc3kutils/: PetsciiToUnicode.h  SegaAsciiJpToUnicode.h  TMS9918State.cpp  TMS9918State.h  TMS9918_BmConverter.cpp  TMS9918_BmConverter.h  TMS9918_PetsciiLoader.cpp  TMS9918_PetsciiLoader.h  TMS9918_SC2Loader.cpp  TMS9918_SC2Loader.h  TMS9918_SC3KExport.cpp  TMS9918_SC3KExport.h
validation/: Prog_BasicToAsm.sc.bas  Prog_BasicWithAsm.sc.bas
